hphp/hack/test/typecheck/xhp/required_attr/inheritance.php.legacy_decl.exp
File "inheritance.php", line 6, characters 10-20:
Required attribute :a is missing. (Typing[4314])
File "inheritance.php", line 3, characters 11-14:
The attribute :a is declared in this class.
